--- a/webpage/index.html
+++ b/webpage/index.html
@@ -50,7 +50,7 @@
                     <li><a class="home-link" href="https://aws.amazon.com/">Home</a></li>
                     <li><a href="https://aws.amazon.com/what-is-cloud-computing/">About</a></li>
                     <li><a href="https://aws.amazon.com/solutions/">Services</a></li>
-                    <li><a href="/testOne.html">Test Link</a></li>
+                    <li><a href="https://steven-barkley.github.io/HTML-Pages-2023/webpage/testOne.html">Test Link</a></li>
                 </ul>
             </nav>
         </header>
